# robotic_grasp

./: .gitignore  README.md  REPORT.md  requirements.txt
assets/ycb/xmls/: banana.xml  foam_brick.xml  mug.xml  potted_meat_can.xml
checkpoints/smallbuf_lowreach_v1/: best_params.msgpack  config.json
dexmate-urdf/: README.md  pyproject.toml
dexmate-urdf/robots/humanoid/vega_1u/: vega_1u.srdf  vega_1u.urdf  vega_1u_collision_spheres.collision.urdf  vega_1u_f5d6.srdf  vega_1u_f5d6.urdf  vega_1u_f5d6_collision_spheres.collision.urdf  vega_1u_f5d6_mujoco.urdf  vega_1u_gripper.srdf  vega_1u_gripper.urdf  vega_1u_gripper_collision_spheres.collision.urdf
dexmate-urdf/robots/humanoid/vega_1u/meshes/visual/: base_link.glb  lift_link.glb  torso_link.glb
envs/: __init__.py  vega_base.py  vega_pick_ycb.py  vega_pick_ycb_multi.py  vega_pick_ycb_softgrasp.py  ycb_objects.py
scripts/: convert_urdf.py  render_policy.py  train_ppo_softgrasp.py  train_sac_vmap.py  verify_scene.py
xmls/: vega_right_arm.xml  vega_right_arm_scene.xml
